# CyBeer

./: README.md  version.json
.github/workflows/: release.yml
docs/: flashing.md  wiring.md
docs/superpowers/plans/: 2026-05-17-cybeer.md  2026-05-21-cybeer-fixes-improvements.md  2026-05-22-cybeer-overhaul.md  2026-05-22-wifi-admin-mobile.md  2026-05-23-ota-bundle.md  2026-05-23-webui-ux-improvements.md
docs/superpowers/specs/: 2026-05-17-cybeer-design.md  2026-05-21-cybeer-fixes-improvements.md  2026-05-22-cybeer-overhaul-design.md  2026-05-22-wifi-admin-mobile-design.md  2026-05-23-ota-bundle-design.md  2026-05-23-webui-ux-improvements-design.md
firmware/: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
firmware/components/cybeer_battery/: CMakeLists.txt  cybeer_battery.c
firmware/components/cybeer_display/: CMakeLists.txt  cybeer_display.c
firmware/components/cybeer_fsm/: CMakeLists.txt  cybeer_fsm.c
firmware/components/cybeer_led/: CMakeLists.txt  cybeer_led.c
firmware/components/cybeer_power/: CMakeLists.txt  cybeer_power.c
firmware/components/cybeer_storage/: CMakeLists.txt  (+3 more)
firmware/components/cybeer_web/: CMakeLists.txt  cybeer_ota.c  cybeer_web.c  cybeer_ws.c
firmware/components/cybeer_web/include/: cybeer_ota.h  cybeer_web.h  cybeer_ws.h
firmware/main/: CMakeLists.txt  app_main.c
firmware/test/: CMakeLists.txt  sdkconfig.defaults
frontend/: admin.html  admin.js  app.css  app.js  claim.html  index.html  participants.html  player.html  setup.html  spectator.html  tournament.html
tools/: build_bundle.py
(+36 files in other folders)
